Review: Minor issues.